tests/regression/error/empty_lhs_in_if_block.lus
node F(x: int) returns ();
let
tel

node N(c: bool) returns ();
let
  if c then
    () = F(0);
  else
    () = F(1);
  fi
tel